[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
billboard = "0.1.0"
colored = "2.0.0"
nix = "0.24.0"
shellexpand = "2.1.0"
skim = "0.9.4"




[[bin]]
name = "filter"
path = "src/filter.rs"


[[bin]]
name = "create_symlink"
path = "src/create_symlink.rs"


[[bin]]
name = "ignore_filter"
path = "src/ignore_filter.rs"


[[bin]]
name = "main"
path = "src/main.rs"

